--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ scikit-learn==1.4.0
 plotly==5.18.0  
 pandas==2.1.4
 matplotlib==3.8.2
+wordcloud==1.9.3
+emoji==2.10.1
+seaborn==0.13.2
+urlextract==1.8.0
